# maivi-agent

./: .$grafo-agente.drawio.bkp  .env.example  .gitignore  log_agent_ai.log.2026-01-06  log_agent_ai.log.2026-01-12  logging.yml  main.py  pyproject.toml  requirements.txt
agent-core/: README.md  logging.yml  requirements.txt
agent-core/architecture/: .$grafo-agente.drawio.bkp
agent-core/examples/: test_calcom_simple.py  test_google_calendar_simple.py
agent-core/src/: app.py
agent-core/src/api/routes/: receipts.py
agent-core/src/llm/domain/: llm_entities.py  llm_exceptions.py  llm_service.py
agent-core/src/llm/infrastructure/: __init__.py  openai_service.py
agent-core/src/shared/: init_logger.py
architecture/: .$grafo-agente.drawio.bkp  grafo-agente.drawio
examples/: interrupt_example.py  multiple_implementations_example.py
provider-channel/channerl-wsp/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
provider-channel/channerl-wsp/src/: app.ts
src/: app.py
src/llm/: README.md
src/llm/application/: llm_orchestrator.py
src/llm/domain/: llm_client.py  llm_config.py  llm_entities.py  llm_service.py
src/llm/infrastructure/: __init__.py  container.py  openai_client.py  openai_service.py
src/maivi_agent/application/: graph.py  nodes.py
src/maivi_agent/domain/: entities.py  image_storage.py  receipts_repository.py  state.py
src/maivi_agent/infrastructure/: calcom_notification_service.py  container.py  image_storage_service.py  receipts_repository_impl.py
src/shared/: config.py  init_logger.py  prompts.py
(+17 files in other folders)
